# Sage

./: .dockerignore  .env.example  .env.example.minimal  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_CN.md  TODO_remove_show_content.md  analyze_error_reasons.py  analyze_logs.py  change_log.md  conftest.py  demo_skill_execution.py  docker-compose.yml  mcp_setting_example.json  package-lock.json  package.json  preset_config_example.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_baidu.py  test_dingtalk_file.py  test_dingtalk_file2.py  test_dingtalk_webhook_file.py  test_feishu.py  test_feishu_file.py  test_im_status.html  test_image_simple.py  test_image_understanding.py  test_imessage.py  test_imessage_permissions.py  test_imessage_send.py  test_message_merge.py  test_scheduler_standalone.py  test_task_scheduler.py  test_tool_binding.py  (+4 more)
app/: README.md  README_SERVER.md  __init__.py  change_log.md  fibre_cli.py  sage_cli.py  sage_demo.py  sage_server.py
app/desktop/tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
app/desktop/tauri/capabilities/: default.json
app/desktop/tauri/icons/: icon.icns
app/desktop/tauri/resources/node/: README.md
app/desktop/tauri/src/: main.rs
common/: __init__.py
deploy/: README.md  compose.sh  docker-compose.observability.yml  docker-compose.shared.yml
docker/: Dockerfile  Dockerfile.server  Dockerfile.web  Dockerfile.wiki  Dockerfile_server  README.md  entrypoint.sh  nginx.conf  nginx_wiki.conf
docs/: API_REFERENCE.md  API_REFERENCE_CN.md  APPLICATIONS.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  CHANGELOG.md  CHANGELOG_CN.md  CONFIGURATION.md  CONFIGURATION_CN.md  CORE_CONCEPTS.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  EXAMPLES.md  EXAMPLES_CN.md  EXAMPLES_USAGE.md  EXAMPLES_USAGE_CN.md  GETTING_STARTED.md  Gemfile  HTTP_API_REFERENCE.md  MCP_SERVERS.md  OAUTH2_LAGE_INTEGRATION_CN.md  QUICK_START.md  QUICK_START_CN.md  README.md  REFACTOR_REMOVE_AGENT_AS_TOOL.md  (+11 more)
(+2318 files in other folders)
