[package]
name = "sage-desktop"
version = "0.1.0"
description = "Sage Desktop Application"
authors = ["Sage Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "fs-all", "http-all", "shell-sidecar", "shell-open", "window-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.29.1", features = ["process", "io-util", "rt", "macros"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `debug` feature
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
