[package]
name = "sage-desktop"
version = "1.0.0"
description = "Sage Desktop Application"
authors = ["Sage Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.29.1", features = ["process", "io-util", "rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `debug` feature
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
